# kostyor

./: .gitignore  .testr.conf  .travis.yml  README.rst  requirements.txt  roadmap.rst  setup.cfg  setup.py  test-requirements.txt  tox.ini
contrib/: openapi.yml
doc/source/: ansible_driver.rst  arch.rst  cli.rst  conf.py  decision_engine.rst  index.rst  rest_api.rst
doc/source/drivers/: ansible_driver.rst  fuel-ccp.rst  index.rst
kostyor/: cli.py  conf.ini  conf.py  rest_api.py
kostyor/cli/: .testr.conf  README.rst  requirements.txt  setup.py  test-requirements.txt  tox.ini
kostyor/cli/doc/source/: conf.py
kostyor/cli/kostyor_cli/: main.py
kostyor/cli/tests/: __init__.py
kostyor/cli/tests/unit/: test_main.py
kostyor/common/: constants.py  exceptions.py
kostyor/core/: driver.py  engine.py
kostyor/db/: api.py  models.py
kostyor/db/migrations/: alembic.ini
kostyor/db/migrations/alembic/: env.py
kostyor/db/sqlalchemy/: models.py
kostyor/drivers/: ansible_driver.py
kostyor/inventory/: discover.py  upgrades.py
kostyor/resources/: __init__.py  clusters.py  discover.py  hosts.py  services.py  upgrades.py
kostyor/rpc/: app.py
kostyor/rpc/tasks/: __init__.py  execute.py  noop.py
kostyor/tests/unit/: test_db_api.py
kostyor/tests/unit/core/: test_engine.py
kostyor/tests/unit/drivers/: test_ansible.py
kostyor/tests/unit/inventory/: test_discover.py
kostyor/upgrades/: __init__.py  driver.py  engine.py  orchestrator.py  strategy.py
kostyor/upgrades/drivers/: base.py  noop.py
kostyor/upgrades/engines/: __init__.py  nodebynode.py  servicebyservice.py
tools/: create_database.py  create_initial_data.py  run_integration.sh
(+16 files in other folders)
