[metadata]
name = kostyor
summary = upgrade tool
description-file = 
    README.rst
author = Sean M. Collins
author-email = sean@coreitpro.com

[files]
packages = 
    kostyor

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

[pbr]
warnerrors = true


[entry_points]
kostyor.upgrade_drivers =
    noop = kostyor.upgrades.driver:NoOpDriver
kostyor.discovery_drivers =
    openstack = kostyor.inventory.discover:OpenStackServiceDiscovery
