[metadata]
name = kostyor
summary = upgrade tool
description-file =
    README.rst
author = Sean M. Collins
author-email = sean@coreitpro.com

[files]
packages =
    kostyor

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

[pbr]
warnerrors = true


[entry_points]
kostyor.engines =
    node-by-node = kostyor.upgrades.engines.nodebynode:NodeByNode
    service-by-service = kostyor.upgrades.engines.servicebyservice:ServiceByService

kostyor.upgrades.drivers =
    noop = kostyor.upgrades.drivers.noop:NoopDriver

kostyor.discovery_drivers =
    openstack = kostyor.inventory.discover:OpenStackServiceDiscovery
